Ingress/default-scdf-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluesky-default-scdf-ingress
  namespace: default
spec:
  rules:
  - host: scdf-test.bluesky.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamtest2-http
            port:
              number: 8080
